add groovy script to register secrets in jenkins

--- a/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
+++ b/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
@@ -24,7 +24,7 @@ for (plugin in [
   "ws-cleanup",
 ])
 {
-  println "--> insstalling plugin: '" + plugin + "'"
+  println "--> installing plugin: '" + plugin + "'"
   e = Jenkins.instance.updateCenter.getPlugin(plugin).deploy(true).get().getError()
   if (e != null)
   {
