setup jenkins and nexus ldap

--- a/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
+++ b/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
@@ -3,6 +3,7 @@
 import jenkins.model.Jenkins
 
 for (plugin in [
+  "active-directory",
   "ansicolor",
   "build-name-setter",
   "copyartifact",
@@ -13,8 +14,9 @@ for (plugin in [
   "git",
   "global-build-stats",
   "jobConfigHistory",
-  "python",
+  "matrix-auth",
   "nodelabelparameter",
+  "python",
   "parameterized-trigger",
   "rebuild",
   "ssh-slaves",
