add username when creating ssh key credentials in jenkins

--- a/roles/infra_ci/files/jenkins/groovy/04-add-credentials.groovy.j2
+++ b/roles/infra_ci/files/jenkins/groovy/04-add-credentials.groovy.j2
@@ -20,16 +20,16 @@ def systemCredential = { instance, credential ->
     }
 };
 
-def sshCredentials = { instance, username, private_key ->
+def sshCredentials = { instance, id, username, private_key ->
     systemCredential(
         instance = instance,
         credential = new BasicSSHUserPrivateKey(
             CredentialsScope.GLOBAL,
-            "$username-ssh",
+            "$id-ssh",
             username,
             new BasicSSHUserPrivateKey.DirectEntryPrivateKeySource(private_key),
             null,
-            "$username SSH Credential"
+            "$id SSH Credential"
         )
     )
 };
@@ -68,9 +68,9 @@ def sshVars = [:];
   {% if value.username is defined and value.password is defined %}
     println "  * Adding Credentials {{ var }}"
     credentialVars.put('{{ var }}', ['username': '{{ value.username }}', 'password':'{{ value.password }}']);
-  {% elif 'PRIVATE_KEY' in value or 'PRIVATE KEY' in value %}
+  {% elif value.username is defined and value.private_key is defined %}
     println "  * Adding SSH key {{ var }}"
-    sshVars.put('{{ var }}', '''{{ value }}''');
+    sshVars.put('{{ var }}', ['username':'{{ value.username }}', 'private_key':'''{{ value.private_key }}''']);
   {% elif value %}
     println "  * Adding Secret {{ var }}"
     secretVars.put('{{ var }}', '''{{ value }}''');
@@ -82,11 +82,12 @@ def sshVars = [:];
 
 def instance = Jenkins.getInstance();
 
-sshVars.each { id, private_key ->
+sshVars.each { id, values ->
     sshCredentials(
         instance = instance,
         id = id,
-        private_key = private_key
+        username = values['username'],
+        private_key = values['private_key']
     )
 };
 
