--- a/ansible/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
+++ b/ansible/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
@@ -6,6 +6,7 @@ for (plugin in [
   "active-directory",
   "ansicolor",
   "build-name-setter",
+  "build-user-vars-plugin",
   "copyartifact",
   "credentials-binding",
   "credentials",
