--- a/ansible/roles/infra_ci/files/jenkins/groovy/04-add-credentials.groovy.j2
+++ b/ansible/roles/infra_ci/files/jenkins/groovy/04-add-credentials.groovy.j2
@@ -80,6 +80,23 @@ def sshVars = [:];
 {% endfor %}
 
 
+{% if JENKINS_EXTRA_CREDENTIALS is defined %}
+  {% for var, value in JENKINS_EXTRA_CREDENTIALS.items() %}
+    {% if value.username is defined and value.password is defined %}
+      println "  * Adding extra Credentials {{ var }}"
+      credentialVars.put('{{ var }}', ['username': '{{ value.username }}', 'password':'{{ value.password }}']);
+    {% elif value.username is defined and value.private_key is defined %}
+      println "  * Adding extra SSH key {{ var }}"
+      sshVars.put('{{ var }}', ['username':'{{ value.username }}', 'private_key':'''{{ value.private_key }}''']);
+    {% elif value %}
+      println "  * Adding extra Secret {{ var }}"
+      secretVars.put('{{ var }}', '''{{ value }}''');
+    {% else %}
+      println "  * Skipping extra Secret {{ var }}"
+    {% endif %}
+  {% endfor %}
+{% endif %}
+
 def instance = Jenkins.getInstance();
 
 sshVars.each { id, values ->
