change the name of JENKINS_CREDENTIALS and JENKINS_GLOBAL_ENV

--- a/ansible/roles/infra_ci/files/jenkins/groovy/04-add-credentials.groovy.j2
+++ b/ansible/roles/infra_ci/files/jenkins/groovy/04-add-credentials.groovy.j2
@@ -64,7 +64,7 @@ def secretVars = [:];
 def credentialVars = [:];
 def sshVars = [:];
 
-{% for var, value in JENKINS_CREDENTIALS.items() %}
+{% for var, value in JENKINS_FORGE_CREDENTIALS.items() %}
   {% if value.username is defined and value.password is defined %}
     println "  * Adding Credentials {{ var }}"
     credentialVars.put('{{ var }}', ['username': '{{ value.username }}', 'password':'{{ value.password }}']);
