--- a/ansible/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
+++ b/ansible/roles/infra_ci/files/jenkins/groovy/03-install-plugins.groovy.j2
@@ -7,6 +7,7 @@ plugins = [
   "ansicolor",
   "build-name-setter",
   "build-user-vars-plugin",
+  "cloudbees-disk-usage-simple",
   "copyartifact",
   "credentials-binding",
   "credentials",
